--- a/_posts/2020-06-05-29.md
+++ b/_posts/2020-06-05-29.md
@@ -235,7 +235,7 @@ Kolejna rzecz:**Kind**. Kubernetes indooker, czyli jeżeli ktoś się uczy Kuber
 **SW** : Tak, odrobina emela i jakieś testowanie. Wygrzebałem coś, co już w pierwszym nagraniu o Technology Radarze robiliśmy. **Karate** , który teraz wskoczył do Triala do testowania. Powoli idzie sobie do góry. Obecnie jest do testowania ogólnie, do testowania API, więc można sprawdzić. Dla mnie było plusem, że można dobrze opisać testowanie swojego API testowego i wrzucić to w czytelnym formacie do repo. To dla mnie był duży plus, jeżeli ktoś chce robić testy integracyjne. W przeciwieństwie do tego, jak gadaliśmy o Postmanie i jego hakach, które ma.
 
 **ŁK** : Tak. Z Postmanem ostatnio mam coraz więcej do czynienia. Muszę powiedzieć, że pomimo tego, że trochę rzeczy pozmieniali, to przy większej skali bywa problematyczny. Nie oszukujmy się – trzeba będzie pójść w wersję płatną.
-Ciężko wybrać coś, co nie jest frontendowe, ale jest ciekawa rzecz:**GraphQL**** Inspector**. Co to jest? Opis jest dość ciekawy: lets you compare changes between two GraphQL schemas. Czyli: GraphQL dorasta do tego, że jednak wersjonowanie jest dobrym pomysłem.
+Ciężko wybrać coś, co nie jest frontendowe, ale jest ciekawa rzecz:**GraphQL Inspector**. Co to jest? Opis jest dość ciekawy: lets you compare changes between two GraphQL schemas. Czyli: GraphQL dorasta do tego, że jednak wersjonowanie jest dobrym pomysłem.
 
 **SW** : Albo przynajmniej sprawdzanie, co się zmienia.
 
